--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "paths": {
       "@/*": ["./*"],
       "@components/*": ["./app/_components/*"],
+      "@classes/*": ["./app/_classes/*"],
+      "@constants/*": ["./app/_constants/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
